HOP-3065: cleanup HTTP Post add MDI support